@@ -10,3 +10,9 @@ override_dh_autoreconf:
 
 override_dh_auto_test:
 	VERBOSE=1 HOME=$(CURDIR) xvfb-run $(MAKE) check
+
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
+
+override_dh_missing:
+	dh_missing --fail-missing
