@@ -15,6 +15,8 @@ d-feet (0.3.12-2) UNRELEASED; urgency=medium
       macros
   * d/watch: Use https URL, version 4, @PACKAGE@, @ANY_VERSION@,
     @ARCHIVE_EXT@
+  * Install to debian/tmp, and use d/d-feet.install to move AppStream
+    XML to /usr/share/metainfo
 
  -- Simon McVittie <smcv@debian.org>  Sat, 04 Nov 2017 14:37:11 +0000
 
